@@ -1,95 +1,40 @@
-buildscript {
-    ext {
-        springBootVersion = '2.0.1.RELEASE'
-        dockerPluginVersion = '0.19.2'
-        sonarqubePluginVersion = '2.6.2'
-    }
-    repositories {
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-        classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:${dockerPluginVersion}"
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:${sonarqubePluginVersion}"
-    }
-}
-
-plugins {
-    id 'org.springframework.boot' version '2.0.1.RELEASE'
-}
-
-apply plugin: 'idea'
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.palantir.docker'
 apply plugin: 'checkstyle'
 apply plugin: 'pmd'
-apply plugin: "org.sonarqube"
 
 group = 'bonux.yada'
 version = '0.0.1-SNAPSHOT'
 
-sourceCompatibility = 1.10
-targetCompatibility = 1.10
+ext.springBootVersion = '2.0.2.RELEASE'
+ext.sonarqubePluginVersion = '2.6.2'
+ext.checkstyleVersion = '8.9'
+ext.sevntuChecksVersion = '1.29.0'
 
-repositories {
-    mavenCentral()
+ext.libraries = [
+        jdbcH2      : 'com.h2database:h2',
+        jdbcPostgres: 'org.postgresql:postgresql',
+        db_support  : ["org.springframework:spring-jdbc",
+                       "com.zaxxer:HikariCP"],
+        db_init     : 'org.liquibase:liquibase-core',
+        test        : 'org.springframework.boot:spring-boot-starter-test'
+]
+
+gradle.taskGraph.beforeTask { Task task ->
+    println "executing $task ..."
 }
 
-dependencies {
-    compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.springframework.boot:spring-boot-starter-aop')
-    compile('org.springframework.boot:spring-boot-starter-hateoas')
-    compile('org.springframework.boot:spring-boot-starter-jersey')
-    compile('org.springframework.boot:spring-boot-starter-quartz')
-    compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.session:spring-session-core')
-    runtime('org.springframework.boot:spring-boot-devtools')
-
-    compile("org.springframework:spring-jdbc")
-
-    compile("com.zaxxer:HikariCP")
-
-    compile('org.liquibase:liquibase-core')
-
-    runtime('com.h2database:h2')
-    runtime('org.postgresql:postgresql')
-
-    annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.springframework.security:spring-security-test')
-}
-
-String activeProfiles = project.getProperties().get("spring.profiles.active")
-
-bootRun {
-    if (activeProfiles != null) {
-        systemProperties = [
-                'spring.profiles.active': activeProfiles
-        ]
+gradle.taskGraph.afterTask { Task task, TaskState state ->
+    if (state.failure) {
+        println "FAILED"
+    }
+    else {
+        println "done"
     }
 }
 
-docker {
-    dockerfile = file("src/infra/Dockerfile")
-    name "${project.group}/${jar.baseName}"
-    files(jar.archivePath, file("src/infra/run.sh"))
-    noCache true
-
-    def javaOpts = "-Dspring.profiles.active=${activeProfiles}"
-
-    if (activeProfiles == null || activeProfiles.indexOf("prod") == 0) {
-        javaOpts += " -agentlib:jdwp=transport=dt_socket,address=9009,server=y,suspend=n"
+allprojects {
+    repositories {
+        mavenCentral()
     }
-
-    buildArgs(['JAR_FILE' : "${jar.archiveName}",
-               'JAVA_OPTS': javaOpts])
 }
 
 pmd {
@@ -121,11 +66,54 @@ checkstyle {
     ignoreFailures = true
     configFile = file("${project.rootDir}/checkstyle.xml")
 
-    project.ext.checkstyleVersion = '8.9'
-    project.ext.sevntuChecksVersion = '1.29.0'
-
     dependencies {
         checkstyle "com.puppycrawl.tools:checkstyle:${checkstyleVersion}"
         checkstyle "com.github.sevntu-checkstyle:sevntu-checks:${sevntuChecksVersion}"
+    }
+}
+
+subprojects {
+    afterEvaluate { Project project1 ->
+        if (project1 != project(':infra')) {
+            repositories {
+                jcenter()
+            }
+
+            compileJava {
+                inputs.property("moduleName", moduleName)
+                doFirst {
+                    options.compilerArgs = [
+                            '--module-path', classpath.asPath,
+                    ]
+                    classpath = files()
+                }
+            }
+
+            compileTestJava {
+                inputs.property("moduleName", moduleName)
+                doFirst {
+                    options.compilerArgs = [
+                            '--module-path', classpath.asPath,
+                            '--add-modules', 'junit',
+                            '--add-reads', "$moduleName=junit",
+                            '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                    ]
+                    classpath = files()
+                }
+            }
+
+            test {
+                inputs.property("moduleName", moduleName)
+                doFirst {
+                    jvmArgs = [
+                            '--module-path', classpath.asPath,
+                            '--add-modules', 'ALL-MODULE-PATH',
+                            '--add-reads', "$moduleName=junit",
+                            '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+                    ]
+                    classpath = files()
+                }
+            }
+        }
     }
 }
